apollo-router/src/plugins/progressive_override/snapshots/apollo_router__plugins__progressive_override__tests__overridden_field_yields_expected_query_plan.snap
---
source: apollo-router/src/plugins/progressive_override/tests.rs
expression: query_plan
---
{
  "data": {
    "percent100": null
  },
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "Subgraph1"
      }
    }
  ],
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "kind": "Fetch",
              "serviceName": "Subgraph1",
              "variableUsages": [],
              "operation": "{ percent100 { __typename id } }",
              "operationName": null,
              "operationKind": "query",
              "id": null,
              "inputRewrites": null,
              "outputRewrites": null,
              "contextRewrites": null,
              "schemaAwareHash": "0f1084ae91e774c93ef9d232672689a7923147123cb1006daa19ff30f2caf44e",
              "authorization": {
                "is_authenticated": false,
                "scopes": [],
                "policies": []
              }
            },
            {
              "kind": "Flatten",
              "path": [
                "percent100"
              ],
              "node": {
                "kind": "Fetch",
                "serviceName": "Subgraph2",
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "typeCondition": "T",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ]
                  }
                ],
                "variableUsages": [],
                "operation": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on T { foo } } }",
                "operationName": null,
                "operationKind": "query",
                "id": null,
                "inputRewrites": null,
                "outputRewrites": null,
                "contextRewrites": null,
                "schemaAwareHash": "c41b69a5e893f9bc2d89067fce77413269e79d6fc8493ed83e5324862a4417bb",
                "authorization": {
                  "is_authenticated": false,
                  "scopes": [],
                  "policies": []
                }
              }
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        percent100 {\n          __typename\n          id\n        }\n      }\n    },\n    Flatten(path: \"percent100\") {\n      Fetch(service: \"Subgraph2\") {\n        {\n          ... on T {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on T {\n            foo\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
